iac/aws/ingress-rule/spec-file/dev.service.ingress-rule.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: service-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:108199670400:certificate/a0252240-82c4-4041-8e14-8fb66756d4d0
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-2016-08
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    # 그룹명을 주어 해당그룹의 로드벨런스에 인그레스를 묶이게 한다.
    alb.ingress.kubernetes.io/group.name: 'mosaic-square'
spec:
  ingressClassName: alb
  rules:
    - host: "www.dev.mosaicsquare.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mosaic-square-web
                port:
                  number: 80
    - host: "admin.dev.mosaicsquare.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mosaic-square-admin-web
                port:
                  number: 80
    - host: "service.dev.mosaicsquare.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mosaic-square-service
                port:
                  number: 80        
    - host: "blockchain.dev.mosaicsquare.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mosaic-square-blockchain
                port:
                  number: 80
